update example in code.mdx

--- a/src/pages/components/overflow-menu/code.mdx
+++ b/src/pages/components/overflow-menu/code.mdx
@@ -71,12 +71,14 @@ usage documentation, see the Storybooks for each framework below.
         'http://vue.carbondesignsystem.com/?path=/story/components-cvoverflowmenu--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=overflow-menu',
     }}>{`
-    <OverflowMenu>
+    <OverflowMenu
+      selectorPrimaryFocus={'.optionTwo'}
+    >
       <OverflowMenuItem
         itemText="Option 1"
-        primaryFocus
       />
       <OverflowMenuItem
+        className="optionTwo"
         itemText="Option 2 is an example of a really long string and how we recommend handling this"
         requireTitle
       />
