fix(components): button tertiary color :active :hover

--- a/src/pages/components/button/style.mdx
+++ b/src/pages/components/button/style.mdx
@@ -63,7 +63,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | `.bx--btn__icon`     | svg              | `$interactive-03`  |
 | `.bx--btn--tertiary` | background-color | `transparent`      |
 | `.bx--btn--tertiary` | border           | `$interactive-03`  |
-| `:hover`             | text color       | `$text-04`         |
+| `:hover`             | text color       | `$inverse-01`         |
 | `:hover`             | svg              | `$icon-03`         |
 | `:hover`             | background-color | `$hover-tertiary`  |
 | `:active`            | background-color | `$active-tertiary` |
