Info about navigating away from full page create

--- a/src/pages/community/patterns/create-flows/index.mdx
+++ b/src/pages/community/patterns/create-flows/index.mdx
@@ -427,6 +427,21 @@ single scrolling page with anchor links. Toggling to "Show all available
 options" will replace the progress indicator with the In-page navigation anchor
 links.
 
+### Leaving the Create flow
+
+Full page create flows can be exited not only by clicking on "Cancel", but also
+by navigating away by clicking on breadcrumbs or other page navigation. When the
+user tries to exit the Create flow by any means other than explicitly clicking on
+the word "Cancel", we must show a confirmation modal.
+
+<Row>
+<Column colLg={8}>
+
+![Confirm cancel Create modal on Full page](images/FullPageCancelCreateModal.jpg)
+
+<Caption>With Full page flows, show a confirmation modal when the user navigates away.</Caption>
+</Column>
+</Row>
 
 ## Designing with creation flows
 
