--- a/src/pages/components/breadcrumb/style.mdx
+++ b/src/pages/components/breadcrumb/style.mdx
@@ -17,6 +17,14 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | `.bx--breadcrumb-item::after`             | color    | `$text-01`            |
 | `.bx--breadcrumb-item--current .bx--link` | color    | `$text-01`            |
 
+<Row>
+<Column colLg={8}>
+
+![Breadcrumb states and color](images/breadcrumb-style-color.png)
+
+</Column>
+</Row>
+
 ## Typography
 
 When a user hovers overs a breadcrumb, the breadcrumb title should be
@@ -25,14 +33,6 @@ underlined.
 | Class       | Font-size (px/rem) | Font-weight   | Type token       |
 | ----------- | ------------------ | ------------- | ---------------- |
 | `.bx--link` | 14 / 0.875         | Regular / 400 | `$body-short-01` |
-
-<div className="image--fixed">
-
-![Breadcrumb typography treatment example](images/breadcrumb-style-1.png)
-
-</div>
-
-<Caption>Breadcrumb typography treatment example</Caption>
 
 ## Structure
 
@@ -52,7 +52,7 @@ interaction.
 
 <Caption>Structure and spacing measurements for breadcrumb | px / rem</Caption>
 
-## Recommended
+## Truncated breadcrumbs
 
 Truncated breadcrumbs are not currently built into the breadcrumb component. The
 following colors from the [overflow menu](/components/overflow-menu/style) are
@@ -60,10 +60,10 @@ recommended for the overflow breadcrumb list.
 
 ### Color
 
-| Class                                      | Property         | Color token  |
-| ------------------------------------------ | ---------------- | ------------ |
-| `.bx--overflow-menu-options__btn`          | color            | `$icon-01`   |
-| `.bx--overflow-menu-options__option:hover` | background-color | `$hover-row` |
+| Class                                      | Property         | Color token |
+| ------------------------------------------ | ---------------- | ----------- |
+| `.bx--overflow-menu-options__btn`          | color            | `$icon-01`  |
+| `.bx--overflow-menu-options__option:hover` | background-color | `$hover-ui` |
 
 ### Typography
 
@@ -79,7 +79,7 @@ recommended for the overflow breadcrumb list.
 
 <div className="image--fixed">
 
-![Truncated breadcrumb dropdown example](images/breadcrumb-style-3.png)
+![Truncated breadcrumb menu example](images/breadcrumb-style-3.png)
 
 </div>
 
