docs(/contact-us): add Discord server invite link

--- a/src/pages/help/contact-us/index.mdx
+++ b/src/pages/help/contact-us/index.mdx
@@ -70,6 +70,11 @@ the appropriate Carbon repo.
 
 ## Start a new discussion
 
+### Discord
+
+Come chat and get support from Carbon Maintainers and fellow community members
+on our [Discord Server](https://discord.gg/SYjvP8epkM).
+
 ### Slack channels
 
 _For internal IBM users only._ The Carbon core team maintains the following
