Update link to Tearsheet component documentation

--- a/src/pages/community/patterns/create-flows/index.mdx
+++ b/src/pages/community/patterns/create-flows/index.mdx
@@ -498,13 +498,11 @@ and
 ## Related
 
 - [Modal](https://www.carbondesignsystem.com/components/modal/usage/)
-- Narrow tearsheet (Coming soon)
-- Wide tearsheet (Coming soon)
+- [Tearsheet](https://pages.github.ibm.com/cdai-design/pal/components/tearsheet/usage/)
 - [Form](https://www.carbondesignsystem.com/patterns/forms-pattern/)
 - [Toggle](https://www.carbondesignsystem.com/components/toggle/usage)
 - [Page header](https://pages.github.ibm.com/cdai-design/pal/components/page-header/usage)
 - [Progress indicator](https://www.carbondesignsystem.com/components/progress-indicator/usage)
-- Sticky footer (Coming soon)
 
 ## Feedback 
 
