Apply suggestions from code review
Co-authored-by: jillianhowarth <jillianlovesdogs@gmail.com>

--- a/src/pages/community/patterns/import-pattern/index.mdx
+++ b/src/pages/community/patterns/import-pattern/index.mdx
@@ -181,7 +181,7 @@ Refer to accessibility guidance for the components implemented:
 [Modal](https://www.carbondesignsystem.com/components/modal/usage#behaviors),
 [File uploader](https://www.carbondesignsystem.com/components/file-uploader/usage#interactions).
 
-The keyboard behaviour of an upload or import interaction depends on how many
+The keyboard behavior of an upload or import interaction depends on how many
 files are imported or uploaded.
 
 ### Single file uploads and imports
@@ -194,24 +194,24 @@ is applicable to any single file upload or import interaction.
 Often, the upload or import modal (page, or panel) is launched by a button
 press.
 
-1. The user navigates to the Import button using the tab key. If Import is
+1. The user navigates to the Import button using the `Tab` key. If Import is
    launched from an overflow menu, the user may navigate to Import within the
-   overflow menu using the up/down arrow keys.
+   overflow menu using the `Up` and `Down` arrow keys.
 2. The focus state is applied to the button/menu item.
-3. The user clicks “enter” to launch the Import modal.
+3. The user presses `Enter` to launch the Import modal.
 
 #### Focus
 
 1. On opening the modal (page, or panel), the focus is applied to the first
    field that accepts user input. In the case of Import modals, this is the drag
    & drop area.
-2. On `tab`, focus is applied to the second field that accepts user input. If
+2. On `Tab`, focus is applied to the second field that accepts user input. If
    the URL field option is present, focus is applied to this.
-3. If enabled, on `tab`, focus is applied to the primary button (e.g. "Save",
-   "Next"). An "Import" button should not be enabled until a file is selected.
-4. On `tab`, focus is applied to the Cancel button.
+3. If enabled, on `Tab`, focus is applied to the primary button (for example Save or
+   Next). An Import button should not be enabled until a file is selected.
+4. On `Tab`, focus is applied to the Cancel button.
 
-The user cycles input methods using tab and hits `return` to activate their
+The user cycles input methods using `Tab` and hits `Return` to activate their
 chosen option (file uploader or URL).
 
 _Using the file uploader_  
@@ -222,17 +222,17 @@ the modal with an optional file loading state.
 _Using the URL field_  
 If the user chooses the URL field, the field gains focus and the user inputs
 their URL.  
-On `tab`, focus is applied to the "Add file" button.  
-On `return` the file is uploaded with an optional loading state. The user can
-also key `return` while focus is applied to the URL field to trigger the "Add
-file" button.
+On `Tab`, focus is applied to the Add file button.  
+On `Return` the file is uploaded with an optional loading state. The user can
+also key `Return` while focus is applied to the URL field to trigger the Add
+file button.
 
 #### Once the file is selected
 
-1. Focus is applied to the "remove" cross on the added file. The user hits enter
+1. Focus is applied to the remove icon on the added file. The user hits `Enter`
    to remove the chosen file and return to the original state of the modal.
-2. On `tab`, focus is applied to the "Import" button
-3. On `tab`, focus is applied to the "Cancel" button
+2. On `Tab`, focus is applied to the Import button
+3. On `Tab`, focus is applied to the Cancel button
 
 ### Multiple file uploads and imports
 
@@ -240,11 +240,11 @@ When multiple files may be selected a modal is not used.
 
 #### Focus
 
-1. On entering an Import section or page, focus on the first `tab` keystroke is
+1. On entering an Import section or page, focus on the first `Tab` keystroke is
    applied to the first field accepting user input. In most cases this is the
    file uploader.
-2. On `tab`, focus is applied to the the URL field.
-3. The user keys `return` to choose between the file uploader and URL field.
+2. On `Tab`, focus is applied to the the URL field.
+3. The user keys `Return` to choose between the file uploader and URL field.
 
 _Using the file uploader_  
 If the user chooses the file uploader, they select files using the
@@ -254,10 +254,10 @@ the page with an optional file loading state.
 _Using the URL field_  
 If the user chooses the URL field, the field gains focus and the user inputs
 their URL.  
-On `tab`, focus is applied to the "Add file" button.  
-On `return` the file is uploaded with an optional loading state. The user can
-also key `return` while focus is applied to the URL field to trigger the "Add
-file" button.
+On `Tab`, focus is applied to the Add file button.  
+On `Return` the file is uploaded with an optional loading state. The user can
+also key `Return` while focus is applied to the URL field to trigger the Add
+file button.
 
 #### When (some) files are selected
 
@@ -267,25 +267,24 @@ adding more files and removing the selected files.
 - Focus returns to the just-used file selection method. For example, if the file
   added so far was added by URL, return focus to the URL field to allow the user
   to add another.
-- If the method used was the file uploader, on `tab`, apply focus to the URL
+- If the method used was the file uploader, on `Tab`, apply focus to the URL
   field.
-- On `tab`, apply focus to the "remove" icon on the added file(s), moving
-  through each using `tab`.
+- On `Tab`, apply focus to the remove icon on the added file(s), moving
+  through each using `Tab`.
 
 #### On reaching the maximum number of added files
 
-In some usecases, there are a maximum number of allowed files. In this situation
+In some use cases, there are a maximum number of allowed files. In this situation,
 the file selection methods are in disabled state. Focus cycles between the
-selected files "remove" actions, and moving to the next section of the page.
+selected files remove actions, and moving to the next section of the page.
 
-1. On returning to the page/panel from the final File uploader/"Add file"
+1. On returning to the page/panel from the final file uploader/add file
    interaction, (after any optional loading state) focus is applied to the
-   "remove" icon on the uploaded files.
-2. On keying `tab`, focus moves through the "remove" icon of each uploaded file.
-3. On continued use of `tab`, focus is applied to the next section or
+   remove icon on the uploaded files.
+2. On keying `Tab`, focus moves through the remove icon of each uploaded file.
+3. On continued use of `Tab`, focus is applied to the next section or
    interaction in the page.
 
-## Related
 
 ## Feedback
 
