Changed "Enter" to "Return"

--- a/src/pages/community/patterns/import-pattern/index.mdx
+++ b/src/pages/community/patterns/import-pattern/index.mdx
@@ -229,7 +229,7 @@ file button.
 
 #### Once the file is selected
 
-1. Focus is applied to the remove icon on the added file. The user hits `Enter`
+1. Focus is applied to the remove icon on the added file. The user hits `Return`
    to remove the chosen file and return to the original state of the modal.
 2. On `Tab`, focus is applied to the Import button
 3. On `Tab`, focus is applied to the Cancel button
