Apply suggestions from code review
Co-authored-by: jillianhowarth <jillianlovesdogs@gmail.com>

--- a/src/pages/community/patterns/export-pattern/index.mdx
+++ b/src/pages/community/patterns/export-pattern/index.mdx
@@ -159,13 +159,13 @@ Adhere to
 
 ### Trigger
 
-Most often, the export modal is triggered by clicking an "export" button.
+Most often, the export modal is triggered by clicking an Export button.
 
-1. The user navigates to the Export button using the tab key. If Export is
+1. The user navigates to the Export button using the `Tab` key. If Export is
    launched from an overflow menu, the user may navigate to Export within the
-   overflow menu using the up/down arrow keys.
+   overflow menu using the `Up` and `Down` arrow keys.
 2. The focus state is applied to the button/menu item.
-3. The user clicks "enter" to launch the Export modal.
+3. The user presses `Enter` to launch the Export modal.
 
 ### Focus
 
@@ -176,22 +176,22 @@ are defined or not.
 
 1. On opening the modal, the focus is applied to the first field that accepts
    user input.
-2. On `tab`, progress through any further fields that accept user input.
-3. On `tab`, apply focus to "Export".
-4. On `tab`, apply focus to "Cancel".
+2. On `Tab`, progress through any further fields that accept user input.
+3. On `Tab`, apply focus to Export.
+4. On `Tab`, apply focus to Cancel.
 
 #### If a sensible default value is provided:
 
-1. On opening the modal, set the focus to the "Export" button.
-2. On `tab`, apply focus to "Cancel".
-3. On `tab`, apply focus to the first field that accepts user input. Follow
-   accessibility guidance for the interaction type of this field (i.e.
+1. On opening the modal, set the focus to the Export button.
+2. On `Tab`, apply focus to Cancel.
+3. On `Tab`, apply focus to the first field that accepts user input. Follow
+   accessibility guidance for the interaction type of this field (for example
    [Radio button](https://www.carbondesignsystem.com/components/radio-button/accessibility#how-it-works)
    or
    [Text input](https://www.carbondesignsystem.com/components/text-input/accessibility#how-it-works))
-4. On `tab`, progress through any further fields that accept user input.
+4. On `Tab`, progress through any further fields that accept user input.
 
 ### Feedback
 
 Where passive modals are used to alert the user of success or failure, open the
-modal with focus applied to the "Close" icon.
+modal with focus applied to the close icon.
