Renamed the badly named "Feedback" section

--- a/src/pages/community/patterns/export-pattern/index.mdx
+++ b/src/pages/community/patterns/export-pattern/index.mdx
@@ -191,7 +191,7 @@ are defined or not.
    [Text input](https://www.carbondesignsystem.com/components/text-input/accessibility#how-it-works))
 4. On `Tab`, progress through any further fields that accept user input.
 
-### Feedback
+### Success & Failure modals
 
 Where passive modals are used to alert the user of success or failure, open the
 modal with focus applied to the close icon.
