--- a/src/pages/help/contact-us/index.mdx
+++ b/src/pages/help/contact-us/index.mdx
@@ -72,7 +72,7 @@ the appropriate Carbon repo.
 
 ### Discord
 
-Come chat and get support from Carbon Maintainers and fellow community members
+Come chat and get support from Carbon maintainers and fellow community members
 on our [Discord Server](https://discord.gg/SYjvP8epkM).
 
 ### Slack channels
