--- a/src/pages/help/contact-us/index.mdx
+++ b/src/pages/help/contact-us/index.mdx
@@ -73,7 +73,7 @@ the appropriate Carbon repo.
 ### Discord
 
 Come chat and get support from Carbon maintainers and fellow community members
-on our [Discord Server](https://discord.gg/SYjvP8epkM).
+on our [Discord server](https://discord.gg/SYjvP8epkM).
 
 ### Slack channels
 
