docs(button): addded danger variants

--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -70,7 +70,7 @@ desired action is to take the user to a new page.
 | _Primary_   | For the principal call to action on the page. Primary buttons should only appear once per screen (not including the application header or in a modal dialog). |
 | _Secondary_ | For secondary actions on each page; these can only be used  in conjunction with a primary button.                                                             |
 | _Tertiary_  | For less prominent actions; tertiary buttons can be used in isolation  or paired with a primary button when there are multiple calls to action.               |
-| _Danger_    | For actions that could have destructive effects on the user’s data  (delete, remove, etc.).                                                                   |
+| _Danger_    | For actions that could have destructive effects on the user’s data  (delete, remove, etc.). Danger button has three styles: primary, tertiary, and ghost.     |
 | _Ghost_     | For the least pronounced actions; often used in conjunction with a primary button.                                                                            |
 
 ## Live demo
@@ -529,8 +529,8 @@ would require an override to the existing code._
 #### Groups with Danger buttons
 
 Danger buttons have a different visual style to inform users of potentially
-destructive actions they are about to take. Within a set, the danger button
-should be styled as a primary button.
+destructive actions they are about to take. Within a set, use the primary danger
+button style.
 
 <Row>
 <Column colLg={8}>
@@ -637,6 +637,26 @@ will be styled as primary or ghost buttons.
 ![Example of an icon-only ghost button in a data table](images/button_usage_30.png)
 
 <Caption>Example of an icon-only ghost button in a data table</Caption>
+
+</Column>
+</Row>
+
+### Danger button variations
+
+The danger button has three different styles: primary, tertiary and ghost.
+Determining which danger button style to use will depend on the level of
+emphasis you want to give to the danger action. Destructive actions that are
+considering a required or primary step in a workflow should use the primary
+danger button style. However, if a destructive action is just one of several
+actions a user could choose then a lower emphasis style like the tertiary danger
+button or the ghost danger button may be more appropriate.
+
+<Row>
+<Column colLg={8}>
+
+![Danger button variations](images/button_usage_31.png)
+
+<Caption>Examples of the primary, tertiary and ghost danger buttons</Caption>
 
 </Column>
 </Row>
