--- a/src/pages/components/button/style.mdx
+++ b/src/pages/components/button/style.mdx
@@ -63,7 +63,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | `.bx--btn__icon`     | svg              | `$interactive-03`  |
 | `.bx--btn--tertiary` | background-color | `transparent`      |
 | `.bx--btn--tertiary` | border           | `$interactive-03`  |
-| `:hover`             | text color       | `$inverse-01`         |
+| `:hover`             | text color       | `$inverse-01`      |
 | `:hover`             | svg              | `$icon-03`         |
 | `:hover`             | background-color | `$hover-tertiary`  |
 | `:active`            | background-color | `$active-tertiary` |
@@ -106,13 +106,13 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 </Column>
 </Row>
 
-### Danger button
+### Primary danger button
 
 | Class                       | Property         | Color token      |
 | --------------------------- | ---------------- | ---------------- |
 | `.bx--btn--danger--primary` | text color       | `$text-04`       |
 | `.bx--btn__icon`            | svg              | `$icon-03`       |
-| `.bx--btn--danger--primary` | background-color | `$support-01`    |
+| `.bx--btn--danger--primary` | background-color | `$danger-01`     |
 | `:hover`                    | background-color | `$hover-danger`  |
 | `:active`                   | background-color | `$active-danger` |
 | `:focus`                    | border           | `$focus`         |
@@ -124,7 +124,60 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 <Row>
 <Column colLg={8}>
 
-![Danger button states and color](images/button-style-danger.png)
+![Primary danger button states and color](images/button-style-danger.png)
+
+</Column>
+</Row>
+
+### Tertiary danger button
+
+| Class                        | Property         | Color token      |
+| ---------------------------- | ---------------- | ---------------- |
+| `.bx--btn--danger--tertiary` | text color       | `$danger-02`     |
+| `.bx--btn__icon`             | svg              | `$danger-02`     |
+| `.bx--btn--danger--tertiary` | border           | `$danger-02`     |
+| `:hover`                     | background-color | `$hover-danger`  |
+| `:hover`                     | text color       | `$text-04`       |
+| `:hover`                     | svg              | `$icon-03`       |
+| `:active`                    | background-color | `$active-danger` |
+| `:active`                    | text color       | `$text-04`       |
+| `:active`                    | svg              | `$icon-03`       |
+| `:focus`                     | border           | `$focus`         |
+| `:focus`                     | inset            | `$ui-background` |
+| `:disabled`                  | background-color | `$disabled-02`   |
+| `:disabled`                  | text color       | `$disabled-03`   |
+| `:disabled`                  | svg              | `$disabled-03`   |
+
+<Row>
+<Column colLg={8}>
+
+![Tertiary danger button states and color](images/button-style-danger-tertiary.png)
+
+</Column>
+</Row>
+
+### Ghost danger button
+
+| Class                     | Property         | Color token      |
+| ------------------------- | ---------------- | ---------------- |
+| `.bx--btn--danger--ghost` | text color       | `$danger-02`     |
+| `.bx--btn__icon`          | svg              | `$danger-02`     |
+| `:hover`                  | background-color | `$hover-danger`  |
+| `:hover`                  | text color       | `$text-04`       |
+| `:hover`                  | svg              | `$icon-03`       |
+| `:active`                 | background-color | `$active-danger` |
+| `:active`                 | text color       | `$text-04`       |
+| `:active`                 | svg              | `$icon-03`       |
+| `:focus`                  | border           | `$focus`         |
+| `:focus`                  | inset            | `$ui-background` |
+| `:disabled`               | background-color | `$disabled-02`   |
+| `:disabled`               | text color       | `$disabled-03`   |
+| `:disabled`               | svg              | `$disabled-03`   |
+
+<Row>
+<Column colLg={8}>
+
+![Ghost danger button states and color](images/button-style-danger-ghost.png)
 
 </Column>
 </Row>
