Apply suggestions from content review
Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -70,7 +70,7 @@ desired action is to take the user to a new page.
 | _Primary_   | For the principal call to action on the page. Primary buttons should only appear once per screen (not including the application header or in a modal dialog). |
 | _Secondary_ | For secondary actions on each page; these can only be used  in conjunction with a primary button.                                                             |
 | _Tertiary_  | For less prominent actions; tertiary buttons can be used in isolation  or paired with a primary button when there are multiple calls to action.               |
-| _Danger_    | For actions that could have destructive effects on the user’s data  (delete, remove, etc.). Danger button has three styles: primary, tertiary, and ghost.     |
+| _Danger_    | For actions that could have destructive effects on the user’s data  (for example, delete or remove). Danger button has three styles: primary, tertiary, and ghost.     |
 | _Ghost_     | For the least pronounced actions; often used in conjunction with a primary button.                                                                            |
 
 ## Live demo
@@ -646,7 +646,7 @@ will be styled as primary or ghost buttons.
 The danger button has three different styles: primary, tertiary and ghost.
 Determining which danger button style to use will depend on the level of
 emphasis you want to give to the danger action. Destructive actions that are
-considering a required or primary step in a workflow should use the primary
+considered a required or primary step in a workflow should use the primary
 danger button style. However, if a destructive action is just one of several
 actions a user could choose then a lower emphasis style like the tertiary danger
 button or the ghost danger button may be more appropriate.
@@ -656,7 +656,7 @@ button or the ghost danger button may be more appropriate.
 
 ![Danger button variations](images/button_usage_31.png)
 
-<Caption>Examples of the primary, tertiary and ghost danger buttons</Caption>
+<Caption>Examples of the primary, tertiary, and ghost danger buttons</Caption>
 
 </Column>
 </Row>
