--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -643,7 +643,7 @@ will be styled as primary or ghost buttons.
 
 ### Danger button variations
 
-The danger button has three different styles: primary, tertiary and ghost.
+The danger button has three different styles: primary, tertiary, and ghost.
 Determining which danger button style to use will depend on the level of
 emphasis you want to give to the danger action. Destructive actions that are
 considered a required or primary step in a workflow should use the primary
