--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -648,7 +648,7 @@ Determining which danger button style to use will depend on the level of
 emphasis you want to give to the danger action. Destructive actions that are
 considered a required or primary step in a workflow should use the primary
 danger button style. However, if a destructive action is just one of several
-actions a user could choose then a lower emphasis style like the tertiary danger
+actions a user could choose from, then a lower emphasis style like the tertiary danger
 button or the ghost danger button may be more appropriate.
 
 <Row>
