fix(parnters-tutorials): fix aat header violation and content updates

--- a/src/pages/developing/angular-tutorial/wrapping-up.mdx
+++ b/src/pages/developing/angular-tutorial/wrapping-up.mdx
@@ -18,7 +18,7 @@ Badge.
 <AnchorLinks>
 
 <AnchorLink>Application form</AnchorLink>
-<AnchorLink>Badge information</AnchorLink>
+<AnchorLink>Badge process</AnchorLink>
 
 </AnchorLinks>
 
@@ -33,7 +33,7 @@ available to anybody who completes the tutorial, not just IBM employees.
 
 ![](/images/carbon-badge.png)
 
-<Caption>IBM Digital Badge</Caption>
+<Caption>IBM Digital badge</Caption>
 
 </Column>
 </Row>
@@ -53,7 +53,8 @@ badge:
    - Step 5. [Deploying to IBM Cloud](/developing/angular-tutorial/step-5)
 2. Have approved pull requests for steps 1 through 5 in the
    [carbon-tutorial-angular repository](https://github.com/carbon-design-system/carbon-tutorial-angular)
-3. Complete the [badge application](https://badges.carbondesignsystem.com)
+3. Apply for the IBM Digital Badge by completing the
+   [form and survey](https://badges.carbondesignsystem.com/)
 
 <InlineNotification>
 
@@ -86,8 +87,6 @@ practices. The IBM Privacy Statement can be viewed here:
 [https://www.ibm.com/privacy/us/en/](https://www.ibm.com/privacy/us/en/). IBM
 employees can view the IBM Internal Privacy Statement here:
 [https://w3.ibm.com/w3publisher/w3-privacy-notice](https://w3.ibm.com/w3publisher/w3-privacy-notice).
-
-### Application form
 
 To apply for the IBM Digital Badge, please complete the
 [form and survey](https://badges.carbondesignsystem.com).
