--- a/src/pages/case-studies/ibm-commerce-platform.mdx
+++ b/src/pages/case-studies/ibm-commerce-platform.mdx
@@ -30,233 +30,253 @@ of the new self-service purchase experience on IBM.com.
 This section provides a succinct and effective summary that is quick to read,
 and covers the key highlights and takeaways.
 
-## The challenge
+## The Challenge
 
 ### Project goals
 
-Deliver a touchless experience. Make it super easy and intuitive for a user to
-find the product they need and quickly and effectively make a purchase.
+The [IBM.com](http://ibm.com) Commerce Platform team had a mission — to improve
+the completion rate for their checkout flow. They knew there were usability
+issues in the checkout process but they also wanted to add new features.
 
-- 25% NPS improvement
-- Decrease clicks
-- Decrease page load time
-- Increase device compatibility
-- Drive down time spent on a page
+By aligning their checkout flow with the Carbon Design System, they could add
+new features in a consistent way and make a lot of small improvements, which
+would have a large impact on the completion rate and therefore revenue.
 
-Two bullets directly addressed by Carbon refresh — which ones?
+The team aimed to do this by decreasing clicks, increasing device compatibility,
+introducing high-value features, and fixing existing bugs. An additional goal
+was to reduce the amount of time IBM support was spending manually identifying
+and resolving order issues.
 
-The overarching goals of the CIO squad tied directly with what the design group
-proposed.
+### Analytics and research
 
-### Testing and research
+Site analytics helped identify existing issues in the checkout process. There
+were key issues to address during the transition to Carbon:
 
-From testing, knew there were inherent usability issues in the checkout process.
-Problems we knew about on the page: — too many choices
+- There was a lack of visual and information hierarchy on the page.
+- Critical information was missing when users encountered an error, and this
+  blocked them from moving forward.
+- Customers felt the checkout experience was unreliable, and couldn't quickly
+  find what they wanted, so they abandoned the flow.
 
-- too much information on the page
-- not intuitive
-- no clear message
-- the flow was difficult to control
-- cumbersome
-- editing was difficult
+### Competitors
 
-Looking at the metrics — if we could improve the overall user experience from
-the start of configuring the quote all the way through to the purchase, every
-0.1% improvement in purchase conversion is worth \$1M.
-
-Many small improvements together could have a big impact to company revenue.
-
-### Marketshare info
-
-If we did nothing, what would happen?
-
-— our competition was outperforming us in terms of conversion — behind on the
-eCommerce marketplace, on the market share — customer quotes and research —> our
-customers said they found it unreliable, not able to quickly and efficiently
-find what they wanted, so they were abandoning our flow.
+The Commerce team knew their eCommerce marketplace was falling behind
+competitors, in both market share and user experience. Competitors had been
+moving to a more modern experience that used data given by customers to
+pre-populate fields, which significantly reduced the number of clicks. The team
+used this project to strategically update their product to be able to better
+compete in the marketplace.
 
 ## Proposed solution
 
-(incremental improvements = increases to revenue)
+### Carbon transition
 
-Looking at the end-to-end flow. A waterflow that shows all the tactics that
-could be undertaken in order to increase conversion, at each step of the
-customer journey. See where customers are dropping off across the flow.
+The Carbon refresh would make the interface more clear, meaning users wouldn’t
+get lost in the flow and would be able to find what they needed. It also would
+align key pages before, during, and after the checkout process, creating a sense
+of continuity. The team hypothesized that as a result, users would be less
+likely to defect.
 
-- insert image "example of metrics"
+The team mapped out their transition to Carbon, focusing at first on a core set
+of pages. While implementing Carbon components and aligning to the IBM Design
+Language, they took the opportunity to reevaluate their typography and
+illustrations. By improving their type hierarchy and illustrations they hoped to
+transform a somewhat dry experience to something delightful, while building more
+confidence and trust in the interface itself.
 
-Carbon implementation addresses a core percentage of the pages that we're trying
-to support.
+<Row>
+<Column colLg={4}>
 
-If we could improve these pages especially for returning users, can easily find
-earlier work, then this a win-win for everyone.
+![Order confirmation page prior to the redesign](images/checkout-before.png)
 
-Knew what they would get from the Carbon refresh:
+<Caption>Order confirmation page prior to the redesign</Caption>
 
-- be better for the user
+</Column>
 
-- wouldn't get lost in the flow,
+<Column colLg={4}>
 
-- could find what they need,
+![Order confirmation page after the redesign](images/checkout-after.png)
 
-- less likely to defect
+<Caption>Order confirmation page after the redesign</Caption>
 
-Will it grow revenue? Funnel analysis beforehand made it clear that even small
-improvements would improve revenue dramatically. (Outcomes slide)
+</Column>
+</Row>
 
-Carbon refresh directly maps to the CIO business goal of the touchless user
-experience
+### High value features
 
-Refresh configuration and improve ease of use for returning customers, increase
-conversion
+The second part of the solution was identifying high impact features they could
+implement in tandem with the Carbon transition. Many of these features were
+self-contained and so they paired well with the overall transition to Carbon, as
+the team learned to design and develop with the design system.
 
-Very high drop-off percentages from when a customer started their configuration.
+The global address form was one of these features. The new form validated
+addresses as users entered them, giving users confidence that they’d input the
+correct address. Additionally, the support team no longer had to manually follow
+up on invalid addresses, making the experience better for everyone.
 
-Only 8% completion.
+## The approach
 
-Lot of room to make a big improvement. Increase conversions by a few
-percentages.
+The transition to Carbon was an iterative process. Rather than updating the
+entire UI at one time, the Commerce Platform team transitioned their product
+slowly and tactfully. By adopting Carbon iteratively, they were able to see
+which changes made substantial impacts and use that to inform their roadmap and
+subsequent changes.
 
-**Results**
+### Educate on the design system
 
-Before Carbon 38% of customers were converting to purchase (not sure from
-where). Not even half were starting and finishing.
+Before jumping into adopting Carbon, it was important to spend time learning
+about and getting comfortable with Carbon. Shixie Shi Trofimov, the design lead
+of the transition project, led the developers through a crash course to align on
+definitions and terminology. She wanted designers and developers to speak the
+same language as they worked through a set of design specifications.
 
-71% of US customers were converting, but other top 5 five countries were much
-lower
+<Row>
+<Column colLg={8}>
 
-By Carbon refresh globally, could increase global metrics as well. Important to
-everyone.
+![Carbon token quiz](images/token-quiz.png)
 
-- compelling metrics slide a little hard to read
+<Caption>
+  Carbon token quiz that helped get developers comfortable with Carbon token
+  naming conventions.
+</Caption>
 
-## Our approach
-
-Took on Carbon as an iterative process. Rolled it out slowly. Tactfully and
-tastefully. Shixie working closely with the development squad.
-
-Do it iteratively, see what is moving the needle, taking those experiences and
-expanding across the platform as we learn more.
-
-Mapped out an adoption process — the logic of what we wanted to do first and how
-we tried to approach the whole problem.
+</Column>
+</Row>
 
 ### Start small
 
-Started small with a modal that pops up to get the team used to using Carbon
+The adoption process started with one modal. Instead of redesigning an existing
+feature, they identified a high value, self-contained, new feature to develop
+from scratch. The modal solved an important usability issue by allowing users to
+change their country during checkout, but it also provided the developers a
+simple and non-disruptive entry point into adopting Carbon. It also meant they
+didn’t have to worry about breaking existing functionality in production and had
+a safe place to experiment and ship.
 
-- Instead of reskinning existing elements, we identified high value,
-  self-contained, new features to develop in Carbon from scratch.
+The process of designing to shipping the modal with Carbon took about a month
+because it was the team’s first experience with using Carbon and they were
+getting up to speed.
 
-- Team not worried about breaking something in production, safe place to
-  experiment and ship, and see results, this way they wouldn't be losing as much
-  money if the feature broke something
+<Row>
+<Column colLg={8}>
 
-- Took about a month because the team was new to Carbon
+![New modal using Carbon](images/carbon-modal.png)
 
-- Not very disruptive to have the new modal on the old page
+<Caption>New modal for switching countries</Caption>
 
-- It's okay to ship out pieces iteratively. Encourage people to mix experiences
-  to eventually get to the final result faster, otherwise flipping the switch on
-  everything at once takes too long and can be risky.
-
-### Design system education
-
-- Another part of the process was spending an hour or two with the dev team to
-  learn about the design system. A crash course. It was really fast.
-
-- Objective was to get the designers and devs on the same page in terms of
-  language so that the implementation goes faster.
-
-- Quiz and tooling training (it looks like with Abstract as one of the tools)
+</Column>
+</Row>
 
 ### Mix new with old
 
-Started with a fresh feature. A safe place to experiment with Carbon and ship
-right away. It took about a month because the team was new to Carbon.
+The first new Carbon modal was placed on an existing page. It was an easy way
+for the team to get started and begin shipping new pieces. Mixing new with old
+wasn’t disruptive for users. Because the changes were implemented in small
+passes, users may not have even noticed that the experience had changed and
+returning users did not have to relearn the interface. Also, mixing the
+experiences meant that got the team to their final result faster.
 
-Mixed the new modal is sitting on the old page. It's not too disruptive.
+[V2%20-%20Commerce%20Platform%20case%20study%20draft%20f16de374490748149102db15cee3a958/country-switcher.mp4](V2%20-%20Commerce%20Platform%20case%20study%20draft%20f16de374490748149102db15cee3a958/country-switcher.mp4)
 
-Note - We could do a motion of the image Shixie shows. New modal sitting on an
-older page.
+New modal sitting on the original page
 
-It's okay to ship out pieces iteratively. Encourage people to mix experiences to
-eventually get to the final result faster, otherwise flipping the switch on
-everything at once takes too long and can be risky.
+### Iterate, iterate, iterate
 
-Another feature that was good to isolate and sandbox from the flow. Confirmation
-page after the user has checked out successfully — redesigned the experience to
-be simplified. Removing redundant information from the screen that would be in
-an email etc.
+Rather than updating all of the pages at once, the team took an iterative
+approach. By starting with fresh features that integrated with the old UI, the
+team could ship pieces iteratively.
 
-It was an isolated place to get the team on board with Carbon. It was a way to
-get people used to using Carbon. And in the following example, getting
-comfortable with the grid in particular.
+The first stage involved switching individual components to their Carbon
+version, starting with input fields then buttons. After transitioning the
+individual components, the page structure and layout was updated.
 
-### Plan for iterations
+With this approach, the Commerce team was able to refresh their product’s
+experience, set the stage for larger future changes, and complete the project in
+only three months.
 
-Iterative process to implement. Changing the layout of the pages. Done in small
-passes:
+<Row>
+<Column colLg={12}>
 
-- switching fields into Carbon fields, but maintaining the structure
+![Checkout screen in January 2020, April 2020, and the future design](images/iterate.png)
 
-- then the buttons change
+<Caption>
+  From left to right: checkout screen in January 2020 before the transition,
+  April 2020 after the transition, and the future design.
+</Caption>
 
-- at some point, people may not even notice that the complete experience has
-  changed, setting the stage for next gen proposal
-
-- Checkout page example
-
-- Order confirmation page example The entire Carbonation process took only three
-  months. And it's a complicated application
+</Column>
+</Row>
 
 ## Benefits
 
-### Sped up delivery
+There have been several benefits from the transition to Carbon for both the
+Commerce team's own workflow and process, and the user experience. The team
+especially found value in the impact of their delivery speed and need for QA.
 
-Speed up delivery, only 3 months to migrate to Carbon, the dev cycle was mcuh
-faster when we started using straight-up Carbon
+### Faster delivery
+
+The entire Carbon refresh took only three months and since the transition, the
+team’s development cycle has sped up. By using Carbon, the developers are
+placing pre-built components and can therefore focus on more important issues
+instead of taking the time to build out each element and component.
+
+<Row>
+<Column colLg={12}>
+
+![Order confirmation designs and in production after one sprint](images/delivery.png)
+
+<Caption>
+  From left to right: the order confirmation screen handed off to developers,
+  the order confirmation screen in production at the end of one sprint, and the
+  order confirmation screen after in production at the end of the sprint plus
+  two extra working days.
+</Caption>
+
+</Column>
+</Row>
 
 ### Minimal QA
 
-Minimal design QA because many components were straight out of the box.
-Developers liked very much that Carbon components could be used straight of out
-of the box.
+Once the team had been fully onboarded to Carbon, delivery required only minimal
+design QA because they were using components straight out of the box.
 
 ### Continuity in experience
 
-Improved continuity in user experience from previous IBM touch points — Support,
-My IBM. A lot of these experiences will now feel continuous and intuitive.
+The project vastly improved the continuity in user experience with other IBM
+touchpoints, including Support and My IBM. These experiences now feel continuous
+and intuitive for users.
 
-You can see with these pages, that now there is a real continuity of experience
-for the users.
+Within the Commerce Platform flow, pages are also unified and organized in the
+same way, providing familiarity and a feeling of dependability.
 
-They are all organized in the exact same way. There's familiarity and a feeling
-of dependability.
+<Row>
+<Column colLg={8}>
 
-Looks great!
+![Continuity in experiences using Carbon for IBM.com.](images/continuity.png)
+
+<Caption>
+  Continuity in experiences using Carbon for IBM.com. From top to bottom:
+  Product configuration, Checkout, Confirmation, and Profile.
+</Caption>
+
+</Column>
+</Row>
 
 ## Positive outcomes
 
-- Since launch in March, 53% of customers are converting to purchase post-carbon
-  (was 48%)
-- U.S. conversions are relatively flat but the other top 5 countries (Australia,
-  UK, Ireland, Canada, South Korea) are all converting at +3% or +4% higher
-- 0.1% increase is the entire process from pricing to order complete, 5% is from
-  checkout to order purchase (only a few screens)
-
-### User feedback quotes
-
-Maybe work out a way to include user quotes in here.
+After the Carbon transition, more than 50% of customers are converting to
+purchase, which is on par with industry benchmarks. The conversion rate was
+raised by 5% which has led to a large increase in orders and revenue.
 
 ## Next steps
 
-- Next, currently working on the configuration page.
-- When we have the complete end-to-end flow live, we'll continue to increase our
-  conversions.
+The Commerce Team is currently working on improvements experience of their
+configuration page. The next round of visual design improvements will focus on
+better aligning their interface with the Carbon for [IBM.com](http://ibm.com/)
+style models.
 
 ## Related resources
 
-- IBM.com makers, go to
+- [IBM.com](http://ibm.com/) makers, go to
   [Carbon for IBM.com](https://www.ibm.com/standards/web/carbon-for-ibm-dotcom/)
-  for resources to create pages for IBM.com.
+  for resources to create pages for [IBM.com](http://ibm.com/).
