docs(partners): update title back to the people

--- a/src/pages/all-about-carbon/partners.mdx
+++ b/src/pages/all-about-carbon/partners.mdx
@@ -33,7 +33,7 @@ practitioners to ensure Carbon stays true to the community we're serving.
   collaborators and resources.
 - Provide a quarterly update to the advisory board.
 
-### Committee members
+### The people
 
 <Row>
 
@@ -125,7 +125,7 @@ allocation to support Carbon's work.
 - Provide the steering committee with feedback on business needs, to facilitate
   a Carbon roadmap that meets those needs.
 
-### Board members
+### The people
 
 <Row>
 
