--- a/src/pages/components/overflow-menu/code.mdx
+++ b/src/pages/components/overflow-menu/code.mdx
@@ -72,7 +72,7 @@ usage documentation, see the Storybooks for each framework below.
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=overflow-menu',
     }}>{`
     <OverflowMenu
-      selectorPrimaryFocus={'.optionTwo'}
+      selectorPrimaryFocus="option-two"
     >
       <OverflowMenuItem
         itemText="Option 1"
