--- a/src/pages/components/overflow-menu/code.mdx
+++ b/src/pages/components/overflow-menu/code.mdx
@@ -78,7 +78,7 @@ usage documentation, see the Storybooks for each framework below.
         itemText="Option 1"
       />
       <OverflowMenuItem
-        className="optionTwo"
+        className="option-two"
         itemText="Option 2 is an example of a really long string and how we recommend handling this"
         requireTitle
       />
