--- a/src/pages/case-studies/ibm-commerce-platform.mdx
+++ b/src/pages/case-studies/ibm-commerce-platform.mdx
@@ -176,9 +176,8 @@ passes, users may not have even noticed that the experience had changed and
 returning users did not have to relearn the interface. Also, mixing the
 experiences meant that got the team to their final result faster.
 
-[V2%20-%20Commerce%20Platform%20case%20study%20draft%20f16de374490748149102db15cee3a958/country-switcher.mp4](V2%20-%20Commerce%20Platform%20case%20study%20draft%20f16de374490748149102db15cee3a958/country-switcher.mp4)
-
-New modal sitting on the original page
+<Video vimeoId="488148768" />
+<Caption>New modal sitting on the original page</Caption>
 
 ### Iterate, iterate, iterate
 
